--- a/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
@@ -16,6 +16,7 @@
     justify-content: flex-start;
 
     svg {
+        flex-shrink: 0;
         height: var(--sp-4);
         margin: var(--sp-2);
         width: var(--sp-4);
