Add Duck.ai toggle to Customizer

--- a/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
@@ -257,6 +257,7 @@
     align-items: center;
     text-decoration: none;
     color: var(--ntp-color-primary);
+    margin-bottom: var(--sp-3);
 
     &:focus {
         outline: none;
