Use rgba() for disabled text color in AiChatForm styles

--- a/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
@@ -55,7 +55,7 @@
 
     &[disabled] {
         background: none;
-        color: var(--color-black-at-30);
+        color: rgba(0, 0, 0, 0.3);
         cursor: default;
     }
 
