--- a/special-pages/pages/new-tab/app/omnibar/components/Container.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/Container.module.css
@@ -16,7 +16,7 @@
         transition: none;
     }
 
-    &:focus-within {
+    .focused & {
         border-radius: 14px;
         box-shadow: 0 0 0 2px var(--ntp-color-primary), 0 0 0 4px rgba(57, 105, 239, 0.2);
     }
