--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -4,6 +4,7 @@
     padding: var(--sp-1);
 
     svg {
+        flex-shrink: 0;
         margin: var(--sp-2);
     }
 }
@@ -12,11 +13,27 @@
     background: none;
     border: none;
     color: var(--ntp-text-normal);
-    flex: 1 0 0;
     height: var(--sp-8);
-    padding: 0;
+    left: var(--sp-1);
+    padding-bottom: 0;
+    padding-left: calc(var(--sp-2) + var(--sp-4) + var(--sp-2));
+    padding-right: var(--suffix-text-width);
+    padding-top: 0;
+    position: absolute;
+    right: var(--sp-1);
 
     &:focus {
         outline: none;
     }
+}
+
+.suffixSpacer {
+    overflow: hidden;
+    visibility: hidden;
+    white-space: pre;
+}
+
+.suffix {
+    color: var(--ntp-color-primary);
+    flex-shrink: 0;
 }
