--- a/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
@@ -16,6 +16,7 @@
     justify-content: flex-start;
 
     svg {
+        flex-shrink: 0;
         margin: var(--sp-2);
     }
 
@@ -23,5 +24,35 @@
         background: var(--ddg-color-primary);
         border-radius: 4px;
         color: var(--color-white);
+
+        .suffix {
+            color: var(--color-white);
+        }
+    }
+}
+
+.title {
+    white-space: pre;
+}
+
+.suffix {
+    color: var(--ntp-text-muted);
+    font-size: 12px;
+}
+
+.badge {
+    align-items: center;
+    background: var(--ntp-controls-raised-backdrop);
+    border-radius: var(--border-radius-sm);
+    display: flex;
+    gap: 6px;
+    height: 22px;
+    margin-left: auto;
+    padding: 0px var(--sp-3);
+
+    svg {
+        height: 9px;
+        margin: 0;
+        width: 9px;
     }
 }
