--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -13,7 +13,7 @@
     background: none;
     border: none;
     color: var(--ntp-text-normal);
-    font-weight: 500;
+    font: var(--input-font);
     height: var(--sp-8);
     left: 7px;
     padding-bottom: 0;
@@ -38,7 +38,7 @@
 }
 
 .suffixSpacer {
-    font-weight: 500;
+    font: var(--input-font);
     overflow: hidden;
     visibility: hidden;
     white-space: nowrap;
@@ -47,4 +47,5 @@
 .suffix {
     color: var(--ntp-color-primary);
     flex: none;
+    font: var(--input-font);
 }
