--- a/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
@@ -1,4 +1,5 @@
 .tabSwitcher {
+    backdrop-filter: blur(48px);
     background: var(--ntp-controls-raised-backdrop);
     border-radius: 99px;
     box-shadow: 0px 1px 0px 0px var(--ntp-shadow-primary) inset;
