--- a/special-pages/pages/new-tab/app/omnibar/components/Container.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/Container.module.css
@@ -1,13 +1,31 @@
-.outer {
+/*
+ * There are three containers:
+ * 1) .root - Pushes other widgets away. Fixed height. Contents overflow. Height animates.
+ * 2) .outer - Has border when suggestions list open. Auto height. No animation.
+ * 3) .inner - Has border when suggestions list closed. Fixed height set to scrollHeight of children. Height animates.
+ *
+ * The intention is that:
+ * - Other widgets are smoothly pushed away when switching to the Duck.ai tab.
+ * - Suggestions list and expanded Duck.ai textarea always overflows over other widgets.
+ * - Omnibar height expands smoothly when switching tab or entering mutiline text into Duck.ai textarea.
+ * - Omnibar height does NOT animate when suggestions list opens or changes.
+ */
+
+.root {
+    --box-shadow-rest: 0px 1px 4px 0px rgba(0, 0, 0, 0.1), 0px 4px 8px 0px rgba(0, 0, 0, 0.08);
+    --box-shadow-focused: 0 0 0 1px var(--ntp-surface-tertiary), 0 0 0 3px var(--ntp-accent-primary), 0 0 0 5px var(--ntp-accent-glow);
+    --box-shadow-suggestions: 0 0 0 3px var(--ntp-surface-tertiary), 0px 4px 12px 3px rgba(0, 0, 0, 0.10), 0px 20px 40px 3px rgba(0, 0, 0, 0.08);
+
     align-self: stretch;
+    transition: height 200ms ease;
     z-index: 1;
+
+    @media (prefers-reduced-motion: reduce) {
+        transition: none;
+    }
 }
 
 .inner {
-    backdrop-filter: blur(48px);
-    background: var(--ntp-surface-tertiary);
-    border-radius: var(--border-radius-lg);
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1), 0px 4px 8px 0px rgba(0, 0, 0, 0.08);
     overflow: hidden;
     position: relative;
     transition: height 200ms ease;
@@ -15,13 +33,23 @@
     @media (prefers-reduced-motion: reduce) {
         transition: none;
     }
+}
 
-    &:not(:has([role="listbox"])).focusRing,
-    &:not(:has([role="listbox"])):focus-within:not(.noFocusRing) {
-        box-shadow: 0 0 0 1px var(--ntp-surface-tertiary), 0 0 0 3px var(--ntp-accent-primary), 0 0 0 5px var(--ntp-accent-glow);
-    }
+.root:has([role="listbox"]) .outer {
+    backdrop-filter: blur(48px);
+    background: var(--ntp-surface-tertiary);
+    border-radius: var(--border-radius-lg);
+    box-shadow: var(--box-shadow-suggestions);
+}
 
-    &:has([role="listbox"]) {
-        box-shadow: 0 0 0 3px var(--ntp-surface-tertiary), 0px 4px 12px 3px rgba(0, 0, 0, 0.10), 0px 20px 40px 3px rgba(0, 0, 0, 0.08);
+.root:not(:has([role="listbox"])) .inner {
+    backdrop-filter: blur(48px);
+    background: var(--ntp-surface-tertiary);
+    border-radius: var(--border-radius-lg);
+    box-shadow: var(--box-shadow-rest);
+
+    &.focusRing,
+    &:focus-within:not(.noFocusRing) {
+        box-shadow: var(--box-shadow-focused);
     }
 }
