NTP: Make omnibar always overflow (#1866)
* Refactor Omnibar to use SuggestionsProvider context

* Don't animate omnibar height when suggestions list changes

* Inline Container into Omnibar, since they're so tightly coupled

* Refactor so that view-related concerns are in SearchForm and
data-related concerns are in SearchFormProvider/useSuggestions

* Fix focus ring and use spacing vars

* DRY popup and field styling

* Rephrase comment

* Strip newlines closer to where it matters

* Update ResizingContainer props type to reflect that style prop won't
work

--- a/special-pages/pages/new-tab/app/omnibar/components/Omnibar.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/Omnibar.module.css
@@ -10,3 +10,68 @@
     margin-bottom: var(--sp-4);
     width: 164px;
 }
+
+/*
+ * There are three containers:
+ * 1) .spacer - Pushes other widgets away. Fixed height. Contents overflow. Height animates.
+ * 2) .popup - Has border when suggestions list open. Auto height. No animation.
+ * 3) .field - Has border when suggestions list closed. Fixed height set to scrollHeight of children. Height animates.
+ *
+ * The intention is that:
+ * - Other widgets are smoothly pushed away when switching to the Duck.ai tab.
+ * - Suggestions list and expanded Duck.ai textarea always overflows over other widgets.
+ * - Omnibar height expands smoothly when switching tab or entering mutiline text into Duck.ai textarea.
+ * - Omnibar height does NOT animate when suggestions list opens or changes.
+ */
+
+.spacer {
+    --box-shadow-rest: 0px 1px 4px 0px rgba(0, 0, 0, 0.1), 0px 4px 8px 0px rgba(0, 0, 0, 0.08);
+    --box-shadow-focused: 0 0 0 1px var(--ntp-surface-tertiary), 0 0 0 3px var(--ntp-accent-primary), 0 0 0 5px var(--ntp-accent-glow);
+    --box-shadow-suggestions: 0 0 0 3px var(--ntp-surface-tertiary), 0px 4px 12px 3px rgba(0, 0, 0, 0.10), 0px 20px 40px 3px rgba(0, 0, 0, 0.08);
+
+    align-self: stretch;
+    transition: height 200ms ease;
+    z-index: 1;
+
+    @media (prefers-reduced-motion: reduce) {
+        transition: none;
+    }
+
+    [data-mode="search"] & {
+        height: var(--sp-10);
+    }
+
+    [data-mode="ai"] & {
+        height: var(--sp-20);
+    }
+}
+
+.field {
+    overflow: hidden;
+    position: relative;
+    transition: height 200ms ease;
+
+    @media (prefers-reduced-motion: reduce) {
+        transition: none;
+    }
+}
+
+.root:has([role="listbox"]) .popup,
+.root:not(:has([role="listbox"])) .field {
+    backdrop-filter: blur(48px);
+    background: var(--ntp-surface-tertiary);
+    border-radius: var(--border-radius-lg);
+}
+
+.root:not(:has([role="listbox"])) .field {
+    box-shadow: var(--box-shadow-rest);
+}
+
+.root:not(:has([role="listbox"])) .field[data-focus-ring="true"],
+.root:not(:has([role="listbox"])) .field:focus-within:not([data-focus-ring="false"]) {
+    box-shadow: var(--box-shadow-focused);
+}
+
+.root:has([role="listbox"]) .popup {
+    box-shadow: var(--box-shadow-suggestions);
+}
