--- a/special-pages/pages/new-tab/app/styles/ntp-theme.css
+++ b/special-pages/pages/new-tab/app/styles/ntp-theme.css
@@ -60,10 +60,10 @@ body {
 
     /* Global Colors & Styles - https://www.figma.com/design/3W4vi0zX8hrpQc7zInQQB6/%F0%9F%8E%A8-Global-Colors---Styles?node-id=11-1&p=f&vars=1&m=dev */
     /* @todo: This palette is what the native apps use, we should gradually move over to it */
-    --ntp-surface-tertiary: #FFFFFF;
-    --ntp-text-primary: #1F1F1F;
-    --ntp-text-tertiary: rgba(31, 31, 31, 0.4);
-    --ntp-icons-primary: rgba(31, 31, 31, 0.84);
+    --ntp-surface-tertiary: rgba(255, 255, 255, 0.88); /* This differs from Figma. We're adding alpha so that surfaces blend with custom backgrounds. */
+    --ntp-text-primary: rgba(0, 0, 0, 0.96);
+    --ntp-text-tertiary: rgba(0, 0, 0, 0.42);
+    --ntp-icons-primary: rgba(0, 0, 0, 0.84);
     --ntp-icons-tertiary: rgba(0, 0, 0, 0.36);
     --ntp-accent-primary: var(--color-blue-50);
     --ntp-accent-secondary: var(--color-blue-60);
@@ -94,9 +94,9 @@ body {
 
     /* Global Colors & Styles - https://www.figma.com/design/3W4vi0zX8hrpQc7zInQQB6/%F0%9F%8E%A8-Global-Colors---Styles?node-id=11-1&p=f&vars=1&m=dev */
     /* @todo: This palette is what the native apps use, we should gradually move over to it */
-    --ntp-surface-tertiary: rgba(71, 71, 71, 0.66); /* @fixme: This differs from Figma. We're adding alpha so that surfaces blend with custom backgrounds. */
-    --ntp-text-primary: rgba(255, 255, 255, 0.9);
-    --ntp-text-tertiary: rgba(255, 255, 255, 0.4);
+    --ntp-surface-tertiary: rgba(0, 0, 0, 0.72); /* This differs from Figma. We're adding alpha so that surfaces blend with custom backgrounds. */
+    --ntp-text-primary: rgba(255, 255, 255, 0.96);
+    --ntp-text-tertiary: rgba(255, 255, 255, 0.36);
     --ntp-icons-primary: rgba(255, 255, 255, 0.78);
     --ntp-icons-tertiary: rgba(255, 255, 255, 0.24);
     --ntp-accent-primary: var(--color-blue-20);
