--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -2,7 +2,7 @@
     align-items: center;
     display: flex;
     height: var(--sp-10);
-    padding: var(--sp-1) 7px var(--sp-1) calc(7px + var(--sp-2));
+    padding: var(--sp-3);
 }
 
 .input {
@@ -10,14 +10,10 @@
     border: none;
     color: var(--ntp-text-primary);
     font: var(--input-font);
-    height: var(--sp-8);
-    left: 7px;
-    padding-bottom: 0;
-    padding-left: var(--sp-2);
-    padding-right: var(--suffix-text-width);
-    padding-top: 0;
+    left: 0;
+    padding: var(--sp-3) calc(var(--sp-3) + var(--suffix-text-width)) var(--sp-3) var(--sp-3);
     position: absolute;
-    right: 7px;
+    right: 0;
 
     &::placeholder {
         color: var(--ntp-text-tertiary);
