Add close button to search input

--- a/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
@@ -69,6 +69,14 @@
         opacity: 0.3;
     }
 
+    &:hover:not([disabled]) {
+        background: var(--ntp-accent-secondary);
+    }
+
+    &:active:not([disabled]) {
+        background: var(--ntp-accent-tertiary);
+    }
+
     &:focus-visible {
         box-shadow: var(--focus-ring);
     }
