--- a/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
@@ -12,7 +12,7 @@
     box-sizing: content-box;
     color: var(--ntp-text-primary);
     max-height: 10lh;
-    padding: 11px 15px 0;
+    padding: var(--sp-3) var(--sp-3) 0;
     resize: none;
 
     [data-platform="macos"] & {
@@ -34,7 +34,7 @@
 
     .hasScroll & {
         border-bottom: 1px solid var(--ntp-decoration-tertiary);
-        padding-bottom: 11px;
+        padding-bottom: var(--sp-3);
     }
 }
 
