Don't let close button sit against input text

--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -12,7 +12,7 @@
     font: var(--input-font);
     left: 0;
     padding: var(--sp-3);
-    padding-right: calc(var(--suffix-text-width) + var(--sp-8) + var(--sp-3)); /* Suffix + close button + padding */
+    padding-right: calc(var(--suffix-text-width) + var(--sp-1) + var(--sp-8) + var(--sp-3)); /* Suffix + padding + close button + padding */
     position: absolute;
     right: 0;
 
