--- a/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
@@ -1,14 +1,18 @@
 .tabSwitcher {
-    backdrop-filter: blur(48px);
     background: var(--ntp-controls-raised-backdrop);
     border-radius: 99px;
-    box-shadow: 0px 1px 0px 0px var(--ntp-shadow-primary) inset;
     display: grid;
     gap: var(--sp-0_5);
     grid-template-columns: repeat(var(--tab-count), 1fr);
     overflow: hidden;
     padding: var(--sp-0_5);
     position: relative;
+
+    body:not([data-background-kind="default"]) & {
+        backdrop-filter: blur(48px);
+        background: var(--ntp-surface-background-color);
+        outline: 1px solid var(--ntp-surface-border-color);
+    }
 }
 
 .tab {
@@ -42,7 +46,7 @@
 .blob {
     background-color: var(--ntp-controls-raised-fill-primary);
     border-radius: 18px;
-    box-shadow: 0 4px 4px var(--ntp-shadow-secondary), 0 1px 2px var(--ntp-shadow-secondary), inset 0 1px 0 rgba(255, 255, 255, 0.48);
+    box-shadow: 0 1px 0 0 var(--ntp-tone-tint) inset, 0 1px 4px 0 var(--ntp-shadow-secondary), 0 4px 8px 0 var(--ntp-shadow-secondary);
     height: var(--sp-8);
     left: 0;
     position: absolute;
